fixing Crossroads Health heading overflow on mobile screen widths

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -190,5 +190,9 @@
     .project-info {
       width: 272px;
     }
+
+    .work-title{
+      font-size: 40px;
+    }
   }
  
